--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,9 @@
 .container {
-  margin-top: 100px;
+  margin-top: 150px;
 }
 h1 {
   padding: 10px 20px 0;
+  padding-left: 5px;
   font-size: 35px;
 }
 h2 {
@@ -43,6 +44,7 @@ hr {
   font-size: 18px;
   opacity: 0.8;
   color: rgba(254, 255, 255, 0.862);
+  padding-left: 85px;
 }
 li {
   list-style: none;
@@ -53,8 +55,8 @@ li {
   bottom: 20px;
   font-style: italic;
 }
-.celsius,
-.fahrenheit {
+.celsius {
+  font-size: 26px;
   text-decoration: none;
   color: #f7feff;
 }
